--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vue-3-record",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://j26381000.github.io/practiceVue",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
