--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "vue-3-record",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://j26381000.github.io/practiceVue",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -10,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "gh-pages": "^5.0.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
